# midas-journal-812

ActiveShapeModel/Create2DActiveShapeModel/: 2dasm.cxx  CMakeLists.txt  README.txt
ActiveShapeModel/Create2DActiveShapeModel/Images/: fixed0.tif  fixed1.tif  fixed2.tif  fixed3.tif  fixed4.tif  fixed5.tif
ActiveShapeModel/DrawActiveShapeModel/: CMakeLists.txt  Draw2dasm.cxx  README.txt
